--- a/app/views/blocks/header.pug
+++ b/app/views/blocks/header.pug
@@ -4,7 +4,8 @@ header.header
       .header__menu-logo
         a(href="#")
           img(src="../images/img-logo.png" class="logo__image")
-      i.fa.fa-bars.header__toggle-menu
+      button.header__toggle-menu.hamburger
+        span.bar
       ul.header__menu-list
         li.list__item
           a(href="#" class="list__item-link") Home
