--- a/app/views/blocks/quote.pug
+++ b/app/views/blocks/quote.pug
@@ -4,3 +4,12 @@ section.quote.pt-10
       .quote__content.pb-10
         p.quote__content-title.mb-4 "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standvived nonturiIpsum passages, and more recently with "
         span.quote__content-author Michael Hopkins
+      .quote__content.pb-10
+        p.quote__content-title.mb-4 "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standvived nonturiIpsum passages, and more recently with "
+        span.quote__content-author Michael Hopkins
+      .quote__content.pb-10
+        p.quote__content-title.mb-4 "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standvived nonturiIpsum passages, and more recently with "
+        span.quote__content-author Michael Hopkins
+      .quote__content.pb-10
+        p.quote__content-title.mb-4 "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standvived nonturiIpsum passages, and more recently with "
+        span.quote__content-author Michael Hopkins
