--- a/app/styles/layout/_quote.scss
+++ b/app/styles/layout/_quote.scss
@@ -1,7 +1,10 @@
 .quote {
   background-color: $hover;
-  &__content {
+  &__inner{
     width: 81.5rem;
+    margin: 0 auto;
+  }
+  &__content {
     margin: 0 auto;
     text-align: center;
     &-title {
@@ -10,21 +13,24 @@
       color: white;
       line-height: $line-height-4;
     }
-    &-author{
+    &-author {
       font-weight: 500;
       font-size: 1.6rem;
       color: white;
     }
   }
-  @include maxWidth(767px){
+  @include maxWidth(767px) {
     padding-top: 5rem;
-    &__content{
+    &__inner{
+      width: 100%;
+    }
+    &__content {
       width: 100%;
       padding-bottom: 5rem;
-      &-title{
+      &-title {
         font-size: 1.5rem;
       }
-      &-author{
+      &-author {
         font-size: 1.2rem;
       }
     }
