--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -12,6 +12,91 @@ html {
   padding: 0 15px;
   margin: 0 auto; }
 
+.hamburger {
+  position: relative;
+  display: block;
+  width: 3rem;
+  cursor: pointer;
+  z-index: 1;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: none;
+  outline: none;
+  border: none; }
+
+.hamburger .bar {
+  content: '';
+  width: 50%;
+  display: block;
+  height: 3px;
+  background-color: #000;
+  margin: 6px 0;
+  -webkit-transition: 0.4s;
+  transition: 0.4s; }
+
+.hamburger::after {
+  content: '';
+  width: 75%;
+  display: block;
+  height: 3px;
+  background-color: #000;
+  margin: 6px 0;
+  -webkit-transition: 0.4s;
+  transition: 0.4s; }
+
+.hamburger::before {
+  content: '';
+  width: 100%;
+  display: block;
+  height: 3px;
+  background-color: #000;
+  margin: 6px 0;
+  -webkit-transition: 0.4s;
+  transition: 0.4s; }
+
+.hamburger.is-active::before {
+  -webkit-transform: rotate(-45deg) translate(-5px, 5px);
+  transform: rotate(-45deg) translate(-5px, 5px); }
+
+.hamburger.is-active::after {
+  width: 100%;
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -8px); }
+
+.hamburger.is-active .bar {
+  opacity: 0; }
+
+.slick-dots {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin: 0;
+  padding: 1rem 0;
+  list-style-type: none;
+  padding-bottom: 6rem; }
+  .slick-dots li {
+    margin: 0 0.25rem; }
+  .slick-dots button {
+    display: block;
+    width: 6px;
+    height: 6px;
+    padding: 0;
+    border: none;
+    border-radius: 100%;
+    background-color: #b0e8e7;
+    text-indent: -9999px; }
+  .slick-dots li.slick-active button {
+    background-color: #fffffd;
+    width: 1rem;
+    height: 1rem; }
+
 .align-item-center {
   -webkit-box-align: center;
   -ms-flex-align: center;
@@ -775,8 +860,10 @@ body {
 
 .quote {
   background-color: #10c9c3; }
-  .quote__content {
+  .quote__inner {
     width: 81.5rem;
+    margin: 0 auto; }
+  .quote__content {
     margin: 0 auto;
     text-align: center; }
     .quote__content-title {
@@ -791,6 +878,8 @@ body {
   @media screen and (max-width: 767px) {
     .quote {
       padding-top: 5rem; }
+      .quote__inner {
+        width: 100%; }
       .quote__content {
         width: 100%;
         padding-bottom: 5rem; }
