--- a/app/views/blocks/list.pug
+++ b/app/views/blocks/list.pug
@@ -1,6 +1,6 @@
-section.list.pt-10.pb-10
+section.list.pt-10.pb-4
   .container
-    .list_inner
+    .list__inner
       .list__menu
         .list__menu-item
           img.list__menu-image.mb-3(src="../images/img-list-icon1.png")
@@ -22,7 +22,6 @@ section.list.pt-10.pb-10
           .list__content
             .list__content-title.mb-2 ui / ux design
             .list__content-desc Be set fourth land god darkness  make it wherein own
-      .list__menu
         .list__menu-item
           img.list__menu-image.mb-3(src="../images/img-list-icon5.png")
           .list__content
