--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -67,6 +67,9 @@ html {
 .hamburger.is-active .bar {
   opacity: 0; }
 
+.slick-slide img {
+  margin: 0 auto; }
+
 .slick-dots {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -783,7 +786,7 @@ body {
     flex-direction: row;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap; }
-    .list__menu:first-child {
+    .list__menu > * {
       margin-bottom: 5.5rem; }
     .list__menu-item {
       width: calc(25% - 7rem);
@@ -822,7 +825,8 @@ body {
       word-break: break-word; }
   @media screen and (max-width: 767px) {
     .list {
-      padding: 5rem 0; }
+      padding-top: 5rem;
+      padding-bottom: 0; }
       .list__menu {
         margin-left: 0;
         -ms-flex-wrap: nowrap;
@@ -890,6 +894,7 @@ body {
 
 .brand__list {
   padding: 7rem 4rem;
+  margin-left: -15rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -911,38 +916,10 @@ body {
 
 @media screen and (max-width: 767px) {
   .brand__list {
-    margin-left: 0;
-    display: -ms-grid !important;
-    display: grid !important;
-    -webkit-box-pack: start !important;
-    -ms-flex-pack: start !important;
-    justify-content: flex-start !important;
-    grid-auto-columns: 80%;
-    grid-auto-flow: column;
-    grid-gap: 2.5rem;
-    overflow: auto;
-    overflow-y: hidden;
-    -ms-scroll-snap-type: x mandatory;
-    scroll-snap-type: x mandatory;
-    scroll-snap-stop: always;
-    -ms-touch-action: manipulation;
-    touch-action: manipulation;
-    -webkit-overflow-scrolling: touch;
-    -ms-grid-columns: unset;
-    grid-template-columns: unset;
-    padding: 2rem;
-    -ms-overflow-style: none;
-    scrollbar-width: none; }
-    .brand__list::-webkit-scrollbar {
-      display: none; }
-    .brand__list::-webkit-scrollbar {
-      display: none;
-      width: 0; }
-    .brand__list > * {
-      scroll-snap-align: start; }
+    margin-left: 0; }
     .brand__list-item {
       width: 100%;
-      margin-left: 0; } }
+      margin: 0 auto; } }
 
 .contact {
   background-color: #f5f5f5; }
