--- a/app/views/blocks/mixins.pug
+++ b/app/views/blocks/mixins.pug
@@ -4,3 +4,7 @@ mixin blockContent(data)
     p.block__content-desc.mt-4.mb-4= data.desc
     if data.img
       img.block__content-image(src= data.img)
+
+mixin blockMenuItem(data)
+  li.list__item
+    a(href="#" class="list__item-link")= data.name
