--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -476,8 +476,6 @@ html {
       flex-direction: row;
       -ms-flex-wrap: nowrap;
       flex-wrap: nowrap; }
-    .header__menu .list__item:not(:first-child) {
-      margin-left: 3rem; }
     .header__menu .list__item-link {
       font-size: 1.2rem;
       font-weight: bold;
@@ -490,10 +488,45 @@ html {
   @media screen and (min-width: 768px) {
     .header__toggle-menu {
       font-size: 2rem;
-      display: none; } }
+      display: none; }
+    .header__menu .list__item:not(:first-child) {
+      margin-left: 3rem; } }
   @media screen and (max-width: 767px) {
-    .header__menu-list {
-      display: none; } }
+    .header {
+      position: fixed;
+      width: 100%;
+      top: 0;
+      left: 0;
+      background-color: rgba(255, 255, 255, 0.4); }
+      .header__menu {
+        padding: 2rem 0; }
+        .header__menu-list {
+          -webkit-box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+          box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+          -webkit-box-pack: center;
+          -ms-flex-pack: center;
+          justify-content: center;
+          -webkit-box-orient: vertical;
+          -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+          flex-direction: column;
+          background-color: #fff;
+          position: fixed;
+          width: 100%;
+          top: 0;
+          right: 0;
+          height: 100%;
+          -webkit-transition: all 0.2s linear;
+          transition: all 0.2s linear;
+          -webkit-transform: translateX(100%);
+          transform: translateX(100%); }
+          .header__menu-list.is-active {
+            -webkit-transform: translateX(0);
+            transform: translateX(0); }
+        .header__menu .list__item {
+          margin: 1.5rem 0; }
+          .header__menu .list__item-link {
+            font-size: 1.5rem; } }
 
 img {
   max-width: 100%;
@@ -568,8 +601,11 @@ body {
       line-height: 1.4;
       color: #787878; }
   @media screen and (max-width: 767px) {
-    .slider__content {
-      width: 100%; } }
+    .slider {
+      height: auto; }
+      .slider__content {
+        padding-bottom: 10rem;
+        width: 100%; } }
 
 .skill {
   height: 57rem;
@@ -1051,6 +1087,9 @@ body {
     color: white; }
   .btn--gray {
     background-color: #f5f5f5; }
+  @media screen and (max-width: 767px) {
+    .btn {
+      padding: 1.5rem 3rem; } }
 
 .form__inline {
   display: -webkit-box;
