--- a/app/styles/layout/_quote.scss
+++ b/app/styles/layout/_quote.scss
@@ -1,6 +1,6 @@
 .quote {
   background-color: $hover;
-  &__inner{
+  &__inner {
     width: 81.5rem;
     margin: 0 auto;
   }
@@ -19,9 +19,14 @@
       color: white;
     }
   }
+  @include maxWidth(1023px) {
+    &__inner {
+      width: 100%;
+    }
+  }
   @include maxWidth(767px) {
     padding-top: 5rem;
-    &__inner{
+    &__inner {
       width: 100%;
     }
     &__content {
