--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -915,6 +915,9 @@ body {
       font-weight: 500;
       font-size: 1.6rem;
       color: white; }
+  @media screen and (max-width: 1023px) {
+    .quote__inner {
+      width: 100%; } }
   @media screen and (max-width: 767px) {
     .quote {
       padding-top: 5rem; }
@@ -1036,6 +1039,44 @@ body {
         margin-left: 5.5rem; }
       .footer__box:last-child .footer__list:last-child {
         margin-left: 13.5rem; }
+  @media screen and (max-width: 1023px) {
+    .footer__inner {
+      padding: 5rem 0;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column; }
+    .footer__box {
+      width: 100%;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      margin-top: 3rem; }
+      .footer__box:last-child {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+        align-items: stretch;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+        justify-content: space-between;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+        flex-direction: row;
+        -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap; }
+    .footer__item-design {
+      margin-bottom: 1rem; }
+    .footer__list:first-child {
+      margin-left: 0 !important; }
+    .footer__list:nth-child(2) {
+      margin-left: 0 !important; }
+    .footer__list:last-child {
+      margin-left: 0 !important; } }
   @media screen and (max-width: 767px) {
     .footer__inner {
       padding: 5rem 0;
