--- a/app/views/blocks/galary.pug
+++ b/app/views/blocks/galary.pug
@@ -1,19 +1,19 @@
 section.galary
   .galary__list
     .galary__list-item
-      img(src="../images/img-galary1.png")
+      img.galary__list-image(src="https://images.unsplash.com/photo-1628370678552-207f6c2c033c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80")
     .galary__list-item
-      img(src="../images/img-galary2.png")
+      img.galary__list-image(src="https://images.unsplash.com/photo-1628182997887-1fb3d8c208b2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1546&q=80")
     .galary__list-item
-      img(src="../images/img-galary3.png")
+      img.galary__list-image(src="https://images.unsplash.com/photo-1628330565454-aa57f15ef3ee?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=80")
     .galary__list-item
-      img(src="../images/img-galary4.png")
+      img.galary__list-image(src="https://images.unsplash.com/photo-1628359220811-10df98e31cca?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1502&q=80")
     .galary__list-item
-      img(src="../images/img-galary5.png")
+      img.galary__list-image(src="https://images.unsplash.com/photo-1628359363939-468016799633?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=639&q=80")
     .galary__list-item
-      img(src="../images/img-galary6.png")
+      img.galary__list-image(src="https://images.unsplash.com/photo-1628353921250-9867b0dfbca8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80")
     .galary__list-item
-      img(src="../images/img-galary1.png")
+      img.galary__list-image(src="https://images.unsplash.com/photo-1628177028981-e4b198b80297?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80")
     .galary__list-item
-      img(src="../images/img-galary7.png")
+      img.galary__list-image(src="https://images.unsplash.com/photo-1628350970664-176ff9d77e90?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=80")
   a.btn.btn--gray.galary__btn Load More Work
