--- a/app/views/blocks/footer.pug
+++ b/app/views/blocks/footer.pug
@@ -12,28 +12,28 @@ footer.footer
       .footer__box
         ul.footer__list
           li.footer__list-item
-            a.footer__list-link Projects
+            a(href="#").footer__list-link Projects
           li.footer__list-item
-            a.footer__list-link About
+            a(href="#").footer__list-link About
           li.footer__list-item
-            a.footer__list-link Services
+            a(href="#").footer__list-link Services
           li.footer__list-item
-            a.footer__list-link Carreer
+            a(href="#").footer__list-link Carreer
         ul.footer__list
           li.footer__list-item
-            a.footer__list-link News
+            a(href="#").footer__list-link News
           li.footer__list-item
-            a.footer__list-link Events
+            a(href="#").footer__list-link Events
           li.footer__list-item
-            a.footer__list-link Contact
+            a(href="#").footer__list-link Contact
           li.footer__list-item
-            a.footer__list-link Legals
+            a(href="#").footer__list-link Legals
         ul.footer__list
           li.footer__list-item
-            a.footer__list-link Facebook
+            a(href="#").footer__list-link Facebook
           li.footer__list-item
-            a.footer__list-link twitter
+            a(href="#").footer__list-link twitter
           li.footer__list-item
-            a.footer__list-link Instagram
+            a(href="#").footer__list-link Instagram
           li.footer__list-item
-            a.footer__list-link Dribbble
+            a(href="#").footer__list-link Dribbble
