--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -438,6 +438,48 @@ html {
 .fz-6 {
   font-size: 6rem; }
 
+.fw-bold {
+  font-weight: bold; }
+
+.fw-600 {
+  font-weight: 600; }
+
+.fw-500 {
+  font-weight: 500; }
+
+.fw-400 {
+  font-weight: 400; }
+
+.fw-300 {
+  font-weight: 300; }
+
+.text-start {
+  text-align: left; }
+
+.text-end {
+  text-align: right; }
+
+.text-center {
+  text-align: center; }
+
+.text-decoration-none {
+  text-transform: none; }
+
+.text-decoration-underline {
+  text-transform: underline; }
+
+.text-decoration-line-through {
+  text-transform: line-through; }
+
+.text-lowercase {
+  text-transform: lowercase; }
+
+.text-uppercase {
+  text-transform: uppercase; }
+
+.text-capitalize {
+  text-transform: capitalize; }
+
 .header {
   position: relative;
   z-index: 1; }
@@ -1040,7 +1082,11 @@ body {
       .footer__box:last-child .footer__list-item {
         margin-bottom: 1rem; }
       .footer__box:last-child .footer__list-link {
-        font-size: 1.5rem; }
+        font-size: 1.5rem;
+        cursor: pointer;
+        color: white; }
+        .footer__box:last-child .footer__list-link:hover {
+          color: #10c9c3; }
       .footer__box:last-child .footer__list:first-child {
         margin-left: 14.5rem; }
       .footer__box:last-child .footer__list:nth-child(2) {
